# orchestrator-python

./: .env.example  .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  main.py  pyproject.toml
docker/: Dockerfile  compose.yaml
jenkins/: docker.Jenkinsfile  tests.Jenkinsfile
opa/: .gitignore  README.md  example-data.json  example-policy.rego
orchestrator/: __init__.py  auth.py  config.py  db.py  exceptions.py  iam.py  kafka.py  logger.py  main.py  utils.py  vault.py
orchestrator/common/: __init__.py  adapters.py  crud.py  exceptions.py  schemas.py  utils.py
orchestrator/v1/: __init__.py  crud.py  models.py  router.py  schemas.py  users.py
orchestrator/v1/deployments/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
orchestrator/v1/deployments/resources/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
orchestrator/v1/health/: __init__.py  endpoints.py  schemas.py
orchestrator/v1/templates/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
orchestrator/v1/users/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
tests/: conftest.py  test_adapters.py  test_auth.py  test_config.py  test_crud.py  test_db.py  test_lifespan.py  test_logger.py  test_schemas.py  test_user_crud.py  test_user_endpoints.py  test_user_schemas.py  test_utils.py
