[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "INFN-DataCloud python orchestrator backend"
authors = ["Giovanni Savarese <giovanni.savarese@ba.infn.it>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
fastapi = "^0.115.12"
kafka-python = "^2.2.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.4"
pytest-cases = "^3.8.2"
pytest-cov = {extras = ["toml"], version = "^6.0.0"}
pytest-mock = "^3.12.0"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]
